--- a/templates/mssql/0/loop-compose.yml
+++ b/templates/mssql/0/loop-compose.yml
@@ -13,5 +13,5 @@
     description: 'MSSql SA password'
     label: 'SA Password:'
     required: true
-    default: s3cr3t!
+    default: loopedge-s3cr3t!
     type: string
