--- a/templates/mysql/0/docker-compose.yml
+++ b/templates/mysql/0/docker-compose.yml
@@ -1,12 +1,18 @@
-mysql:
-  image: mysql:5.7.22
-  ports:
-    - ${MYSQL_PORT}:3306/tcp
-  environment:
-  - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-  - MYSQL_DATABASE=${MYSQL_DATABASE}
-  - MYSQL_USER=${MYSQL_USER}
-  - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-  restart: 'no'
-  volumes:
-    - mysqldb-vol:/var/lib/mysql 
+version: "2.2"
+
+services:
+  mysql:
+    image: mysql:5.7.22
+    ports:
+      - ${MYSQL_PORT}:3306/tcp
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    restart: 'no'
+    volumes:
+      - mysqldb-vol:/var/lib/mysql 
+
+volumes:
+  mysqldb-vol:
