add version to compose files

--- a/templates/kdb/0/docker-compose.yml
+++ b/templates/kdb/0/docker-compose.yml
@@ -1,9 +1,15 @@
-kdb:
-  image: prologic/kdb
-  volumes:
-    - kdb-vol:/etc/kdb
-  environment:
-    - PORT=${KDB_PORT}
-    - VIRTUALHOST=${KDB_VIRTUALHOST}
-  command: --config=/etc/kdb/kdb.ini
-  restart: always
+version: "2"
+
+services:
+  kdb:
+    image: prologic/kdb:latest
+    volumes:
+      - kdb-vol:/etc/kdb
+    environment:
+      - PORT=${KDB_PORT}
+      - VIRTUALHOST=${KDB_VIRTUALHOST}
+    command: --config=/etc/kdb/kdb.ini
+    restart: always
+
+volumes:
+  kdb-vol:
