--- a/templates/elasticsearch/0/docker-compose.yml
+++ b/templates/elasticsearch/0/docker-compose.yml
@@ -1,11 +1,16 @@
-elasticsearch:
-  image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
-  container_name: elasticsearch
-  environment:
-    - cluster.name=docker-cluster
-    - discovery.type=single-node
-  volumes:
-    - elasticsearch-vol:/usr/share/elasticsearch/data
-  ports:
-    - ${ES_PORT}:9200
+version: "2"
 
+services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
+    container_name: elasticsearch
+    environment:
+      - cluster.name=docker-cluster
+      - discovery.type=single-node
+    volumes:
+      - elasticsearch-vol:/usr/share/elasticsearch/data
+    ports:
+      - ${ES_PORT}:9200
+
+volumes:
+  elasticsearch-vol:
