--- a/templates/elasticsearch/0/docker-compose.yml
+++ b/templates/elasticsearch/0/docker-compose.yml
@@ -2,15 +2,18 @@ version: "2"
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.4
     container_name: elasticsearch
     environment:
       - cluster.name=docker-cluster
       - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     volumes:
       - elasticsearch-vol:/usr/share/elasticsearch/data
     ports:
       - ${ES_PORT}:9200
+      - 9300:9300
 
 volumes:
   elasticsearch-vol:
