--- a/templates/elasticsearch/0/docker-compose.yml
+++ b/templates/elasticsearch/0/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - cluster.name=docker-cluster
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     volumes:
       - elasticsearch-vol:/usr/share/elasticsearch/data
     ports:
