--- a/templates/elasticsearch/config.yml
+++ b/templates/elasticsearch/config.yml
@@ -1,4 +1,4 @@
 name: Elasticsearch
 description: Elasticsearch is a distributed, RESTful search and analytics engine.
 category: Utils
-version: latest
+version: 6.2.4-oss
