--- a/templates/mssql/0/docker-compose.yml
+++ b/templates/mssql/0/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - SA_PASSWORD=${SA_PASSWORD}
     volumes:
       - mssqldb-vol:/var/opt/mssql/data
+    restart: ${RESTART}
 
 volumes:
   mssqldb-vol:
