--- a/templates/mysql/0/docker-compose.yml
+++ b/templates/mysql/0/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    restart: 'no'
+    restart: ${RESTART}
     volumes:
       - mysqldb-vol:/var/lib/mysql 
 
