--- a/templates/mysql/0/loop-compose.yml
+++ b/templates/mysql/0/loop-compose.yml
@@ -33,3 +33,9 @@
     required: true
     default: loopedge-s3cr3t!
     type: string
+  - variable: RESTART
+    description: 'Application restart option'
+    label: 'Restart:'
+    required: true
+    default: "no"
+    type: string
