--- a/templates/elasticsearch/0/docker-compose.yml
+++ b/templates/elasticsearch/0/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - elasticsearch-vol:/usr/share/elasticsearch/data
     ports:
       - ${ES_PORT}:9200
+    restart: ${RESTART}
 
 volumes:
   elasticsearch-vol:
