--- a/templates/kdb/0/loop-compose.yml
+++ b/templates/kdb/0/loop-compose.yml
@@ -15,3 +15,10 @@
     required: true
     default: localhost
     type: string
+  - variable: RESTART
+    description: 'Application restart option'
+    label: 'Restart:'
+    required: false
+    default: "no"
+    type: string
+    
