--- a/templates/mssql/0/loop-compose.yml
+++ b/templates/mssql/0/loop-compose.yml
@@ -15,3 +15,10 @@
     required: true
     default: loopedge-s3cr3t!
     type: string
+  - variable: RESTART
+    description: 'Application restart option'
+    label: 'Restart:'
+    required: true
+    default: "no"
+    type: string
+    
