--- a/templates/minio/0/loop-compose.yml
+++ b/templates/minio/0/loop-compose.yml
@@ -22,7 +22,7 @@
     default: secret-key
     type: string
   - variable: RESTART
-    description: 'Application restart option'
+    description: 'Application restart option: no, always, on-failure'
     label: 'Restart:'
     required: true
     default: "no"
