--- a/templates/python/0/loop-compose.yml
+++ b/templates/python/0/loop-compose.yml
@@ -10,7 +10,7 @@
     default: "~/"
     type: string
   - variable: RESTART
-    description: 'Application restart option'
+    description: 'Application restart option: no, always, on-failure'
     label: 'Restart:'
     required: true
     default: "no"
