--- a/templates/elasticsearch/0/loop-compose.yml
+++ b/templates/elasticsearch/0/loop-compose.yml
@@ -10,8 +10,8 @@
     default: 9200
     type: int
   - variable: RESTART
-    description: 'Application restart option: no, always, on-failure'
+    description: 'Application restart option:  always, on-failure'
     label: 'Restart:'
     required: true
-    default: "no"
+    default: "always"
     type: string
