--- a/templates/python/0/loop-compose.yml
+++ b/templates/python/0/loop-compose.yml
@@ -10,9 +10,9 @@
     default: "~/"
     type: string
   - variable: RESTART
-    description: 'Application restart option: no, always, on-failure'
+    description: 'Application restart option: always, on-failure'
     label: 'Restart:'
     required: true
-    default: "no"
+    default: "always"
     type: string
 
