--- a/templates/kdb/0/loop-compose.yml
+++ b/templates/kdb/0/loop-compose.yml
@@ -16,9 +16,9 @@
     default: localhost
     type: string
   - variable: RESTART
-    description: 'Application restart option: no, always, on-failure'
+    description: 'Application restart option: always, on-failure'
     label: 'Restart:'
     required: true
-    default: "no"
+    default: "always"
     type: string
 
