EDGE-2062: Add bridge network named loopedge

--- a/templates/elasticsearch/0/docker-compose.yml
+++ b/templates/elasticsearch/0/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - ${ES_PORT}:9200
     restart: ${RESTART}
+    network_mode: bridge
 
 volumes:
   elasticsearch-vol:
-    driver: local    
+    driver: local
