--- a/templates/python/0/docker-compose.yml
+++ b/templates/python/0/docker-compose.yml
@@ -1,7 +1,11 @@
-python:
-  image: python:2.7-jessie
-  restart: ${RESTART}
-  stdin_open: true
-  tty: true
-  volumes:
-    - ${WORKDIR}:/root/project
+version: "2"
+
+services:
+  python:
+    image: python:2.7-jessie
+    restart: ${RESTART}
+    stdin_open: true
+    tty: true
+    volumes:
+      - ${WORKDIR}:/root/project
+    network_mode: bridge
