--- a/templates/scadalts/0/loop-compose.yml
+++ b/templates/scadalts/0/loop-compose.yml
@@ -10,7 +10,7 @@
     default: 8080
     type: int
   - variable: RESTART
-    description: 'Application restart option: always, on-failure'
+    description: 'Application restart option: no, always, on-failure'
     label: 'Restart:'
     required: true
     default: "always"
