--- a/templates/kdb/0/docker-compose.yml
+++ b/templates/kdb/0/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - PORT=${KDB_PORT}
       - VIRTUALHOST=${KDB_VIRTUALHOST}
     command: --config=/etc/kdb/kdb.ini
-    restart: ${RESTART}
+    restart: "${RESTART}"
 
 volumes:
   kdb-vol:
