--- a/templates/minio/0/docker-compose.yml
+++ b/templates/minio/0/docker-compose.yml
@@ -11,7 +11,7 @@ services:
      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
     command: server /data
-    restart: ${RESTART}
+    restart: "${RESTART}"
 
 volumes:
   minio-vol:
