--- a/templates/mongodb/0/docker-compose.yml
+++ b/templates/mongodb/0/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "${MONGODB_PORT}:27017"
     volumes:
       - mongodb-vol:/data/db
-    restart: ${RESTART}
+    restart: "${RESTART}"
 
 volumes:
   mongodb-vol:
