--- a/templates/pipelinedb/0/docker-compose.yml
+++ b/templates/pipelinedb/0/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - ${PIPELINEDB_PORT}:5432/tcp
     volumes:
       - pipelinedb-vol:/mnt/pipelinedb
-    restart: ${RESTART}  
+    restart: "${RESTART}"
 
 volumes:
   pipelinedb-vol:
