--- a/templates/core5test/0/docker-compose.yml
+++ b/templates/core5test/0/docker-compose.yml
@@ -2,10 +2,8 @@ version: "3.4"
 
 services:
   core5test:
-    image: 192.168.50.34:5000/core5test:latest
+    image: 192.168.50.34:5000/core5test
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "8081:80"
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
